--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,10 @@ color: white;
 font-size: 20px;
 padding: 1em;
 }
+
+.social-links {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin: auto;
+}
