--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,13 @@
   background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+ text-align: center;
+ postion: fixed;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+
 }
 
 .avatar-img {
@@ -48,4 +55,10 @@ padding: 1em;
   justify-content: space-between;
   width: 50%;
   margin: auto;
+}
+
+.social-links i {
+  color: white;
+  font-size: 5em;
+  padding: 8px;
 }
