updated projects.js file

--- a/src/App.css
+++ b/src/App.css
@@ -62,3 +62,13 @@ padding: 1em;
   font-size: 5em;
   padding: 8px;
 }
+/*  Project CSS*/
+
+
+.project-grid {
+  display: flex;
+}
+
+
+
+/*  Project CSS*/
