--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,19 @@ padding: 1em;
   display: flex;
 }
 
+.contact-grid {
+text-align: center;
+justify-content: center;
+width: 80%;
+height: 550px;
+background: white;
+color: black;
+border: 2px solid red;
+margin-bottom: 20px;
+
+
+}
+
 
 
 /*  Project CSS*/
