--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,17 @@ padding: 1em;
   display: flex;
 }
 
+
+.contact-body {
+margin: auto;
+position: fixed;
+width: 100;
+height: 100%;
+justify-content: center;
+padding-top: 2em;
+
+
+}
 .contact-grid {
 text-align: center;
 justify-content: center;
@@ -76,7 +87,6 @@ width: 80%;
 height: 550px;
 background: white;
 color: black;
-border: 2px solid red;
 margin-bottom: 20px;
 
 
@@ -88,7 +98,7 @@ margin-bottom: 20px;
 }
 
 .contact-grid p {
-font-family: 'Oxgen', sans-serif
+font-family: 'Oxygen', sans-serif;
 font-weight: bold;
 
 }
@@ -98,9 +108,9 @@ border-top: 5px dotted black;
 margin: auto;
 }
 
-}
-
-
+.contact-list i {
+  font-size: 66px;
+  padding-right: 5rem;
 }
 
 /*  Project CSS*/
