--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 .mdl-layout__content {
   background-image: url("http://www.bensonhospital.org/wp-content/uploads/2017/08/Desk-Background.jpg");
   background-size: cover;
-  
+
 }
 
 .avatar-img {
@@ -94,21 +94,21 @@ width: 100;
 height: 100%;
 justify-content: center;
 padding-top: 2em;
-
-
 }
+
+
 .contact-grid {
 text-align: center;
-justify-content: center;
+justify-content: flex-end;
 width: 80%;
 height: 550px;
-background: white;
-color: black;
+background: black;
+color: white;
 margin-bottom: 20px;
-
+}
+.contact-right-grid{
 
 }
-
 .contact-grid h2{
   font-family:  'Anton'. sans-serif;
 
@@ -121,13 +121,24 @@ font-weight: bold;
 }
 
 .contact-grid hr {
-border-top: 5px dotted black;
+border-top: 5px dotted white;
+width: 50%;
 margin: auto;
 }
 
 .contact-list i {
   font-size: 66px;
   padding-right: 5rem;
+
 }
 
 /*  Project CSS*/
+
+/*  resume CSS*/
+.left-Resume {
+color: white;
+background-color: #27221F;
+}
+
+
+/*  resume CSS*/
