--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,7 @@
 }
 
 .landing-grid {
-  background-image: url(" http://www.bensonhospital.org/wp-content/uploads/2017/08/Desk-Background.jpg;");
-
+background-size: cover;
  text-align: center;
  postion: fixed;
  top: 0;
@@ -21,7 +20,7 @@
 }
 
 .mdl-layout__content {
-  background-image: url("http://www.bensonhospital.org/wp-content/uploads/2017/08/Desk-Background.jpg");
+  background-image: url("https://images.pexels.com/photos/6355/desk-laptop-working-technology.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
   background-size: cover;
 
 }
@@ -37,25 +36,26 @@
   width: 75%;
   margin: auto;
   border-radius: 10px;
+  
 }
 
 
  .banner-text h1 {
-  font-size: 35px;
+  font-size: 50px;
   font-weight: bold;
-  color: white;
-  padding-top: 140px;
+  color: black;
+  padding-top: 50px;
 
 }
 
 .banner-text hr {
-  border-top: 5px dotted white;
+  border-top: 5px dotted black;
   width: 50%;
   margin: auto;
   }
 
 .banner-text p {
-color: white;
+color: black;
 font-size: 20px;
 padding: 1em;
 }
@@ -90,6 +90,8 @@ padding: 1em;
 .contact-body {
 margin: auto;
 position: fixed;
+transform: translate(100%, 0);
+
 width: 100;
 height: 100%;
 justify-content: center;
@@ -111,6 +113,7 @@ margin-bottom: 20px;
 }
 .contact-grid h2{
   font-family:  'Anton'. sans-serif;
+  margin-right: auto;
 
 }
 
@@ -121,7 +124,7 @@ font-weight: bold;
 }
 
 .contact-grid hr {
-border-top: 5px dotted white;
+border-top: 5px dotted black;
 width: 50%;
 margin: auto;
 }
